[ASTERIXDB-2753][EXT] Support reading Parquet from S3
- user model changes: no
- storage format changes: no
- interface changes: yes
  - Adds IRecordReaderFactory#getReaderSupportedFormats

Details:
- Read Parquet files from S3
- Allow different implementations for the same adapter name
  * They can be distinguished using IRecordReaderFactory#getReaderSupportedFormats
- Fix HDFSUtils to get the correct partitions' locations
- Bump Parquet version to 1.12.0
- Make compiler.external.field.pushdown true by default

Change-Id: I7a8f1a9dc31d8b4af508e521d010e2ed10feb7dd
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/8984
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Wael Alkowaileet <wael.y.k@gmail.com>
Reviewed-by: Michael Blow <mblow@apache.org>
Reviewed-by: Hussain Towaileb <hussainht@gmail.com>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>